client-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-service
spec:
    type: ClusterIP
    ports:
        -   port: 5001
            targetPort: 5001
    selector:
        component: web
