ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - http:
            paths:
                -   path: /
                    backend:
                        serviceName: client-service
                        servicePort: 5001
                -   path: /api/
                    backend:
                        serviceName: api-service
                        servicePort: 5000
